# Spice-up

./: .gitignore  .travis.yml  CMakeLists.txt  First Presentation.spice  Licenses.txt  README.md  com.github.philip_scott.spice-up.yml  meson.build  template-creator.js
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  main.yml
data/: CMakeLists.txt  SaveFooter-min.html  SaveFooter.txt  SaveFormat.html  SaveHeader-min.html  SaveHeader.txt  Spice-up.desktop  assets.gresource.xml  com.github.philip-scott.spice-up.appdata.xml  com.github.philip-scott.spice-up.desktop  com.github.philip-scott.spice-up.mime.xml  com.github.philip-scott.spice-up.thumbnailer  com.github.philip_scott.spice-up.appdata.xml  com.github.philip_scott.spice-up.desktop  com.github.philip_scott.spice-up.mime.xml  com.github.philip_scott.spice_up.appdata.xml  com.github.philip_scott.spice_up.desktop  meson.build  stylesheet.css
data/assets/patterns/: LISENCE.txt
data/assets/templates/: BigCity.spice  Black.spice  Colorful.spice  Green.spice  Landscape.spice  Paper.spice  Spice-Up.spice  White.spice
data/icons/: icons.gresource.xml
data/thumbnailer/: com .github.philip-scott.spice-up.Thumbnailer1.service  com.github.philip-scott.spice-up.Thumbnailer1.service
debian/: changelog  control  copyright
functions/: clear-sky.js  get-templates.js  tech-presentation.js
po/: CMakeLists.txt  LINGUAS  POTFILES  ca.po  com.github.philip-scott.spice-up.pot  de.po  es.po  fr.po  ja.po  meson.build  nl_NL.po  pt_BR.po  pt_PT.po  ru.po  spice-up.pot  sr.po  sr@latin.po
schemas/: CMakeLists.txt  com.github.philip-scott.spice-up.gschema.xml  com.github.philip_scott.spice-up.gschema.xml  meson.build  org.up.spice.gschema.xml
src/: Application.vala  CMakeLists.txt  Canvas.vala  Main.vala  StyleSheet.vala  Window.vala  config.vala  config.vala.in  meson.build
src/GraniteStaging/: Inhibitor.vala
src/Services/: Clipboard.vala  DBusThumnailer.vala  Fetcher.vala  FileManager.vala  GamepadSlideController.vala  HistoryManager.vala  ImageHandler.vala  Settings.vala  Slide.vala  SlideManager.vala  Thumbnailer.vala  Utils.vala
src/Services/FileFormat/: Converter.vala  JsonObject.vala  SpiceUpFile.vala  ZipArchiveHandler.vala
src/Services/FileFormat/Objects/: CanvasItem.vala  Presentation.vala  Slide.vala
src/Services/libgamepad/: gamepad-monitor.vala  gamepad.vala  helpers.vala  input-type.vala  libgamepad.vala  meson.build  raw-gamepad-interface.vala  raw-gamepad-monitor-interface.vala  standard-gamepad-axis.vala  standard-gamepad-button.vala
src/Services/libgamepad/drivers/linux/: guid-helpers.vala  raw-gamepad-monitor.vala  raw-gamepad.vala
src/Tests/: CMakeLists.txt  meson.build
src/Tests/Canvas/: CMakeLists.txt  CanvasTest.vala  TestCommon.vala  meson.build
src/Tests/CanvasItems/: CMakeLists.txt  CanvasItemTest.vala  TestCommon.vala
src/Tests/ColorButton/: CMakeLists.txt  ColorButtonTest.vala  TestCommon.vala  meson.build
src/Tests/ColorItem/: CMakeLists.txt  ColorItemTest.vala  meson.build
src/Tests/ImageItem/: CMakeLists.txt  ImageItemTest.vala  TestCommon.vala  meson.build
src/Tests/TextItem/: CMakeLists.txt  MockedCanvasItem.vala  TestCommon.vala  TextItemTest.vala  meson.build
src/Widgets/: Canvas.vala  CanvasItem.vala  ColorButton.vala  DynamicToolbar.vala  EntryCombo.vala  Headerbar.vala  PresenterNotes.vala  PresenterView.vala  SlideList.vala  SlideWidget.vala  Welcome.vala
src/Widgets/CanvasItems/: CanvasItem.vala  ColorItem.vala  Grabber.vala  ImageItem.vala  TextItem.vala
src/Widgets/ColorPicker/: ColorButton.vala  ColorChooser.vala  ColorPicker.vala  Gradient.vala  GradientEditor.vala  PickerWindow.vala
src/Widgets/Templates/: Library.vala  TemplateItem.vala
src/Widgets/Toolbars/: CanvasBar.vala  CommonBar.vala  ImageBar.vala  ShapeBar.vala  TextBar.vala  Toolbar.vala
vapi/: libevdev.vapi
